--- a/linuxqq/PKGBUILD
+++ b/linuxqq/PKGBUILD
@@ -6,7 +6,6 @@ pkgdesc="Tencent QQ NT for Linux"
 arch=('x86_64')
 url="https://im.qq.com"
 license=('custom')
-groups=('')
 depends=('at-spi2-core' 'desktop-file-utils' 'gtk3' 'hicolor-icon-theme' 'libnotify' 'libsecret' 'libxss' 'libxtst' 'nss' 'util-linux-libs' 'bubblewrap' 'xdg-utils' 'xdg-user-dirs')
 optdepends=('libappindicator-gtk3')
 options=('!strip' '!emptydirs')
@@ -19,7 +18,7 @@ sha256sums=('e3aa15ff6ae089b655df3913c6020ca56726bd676995aaf29b313fbd0643ea42'
 package(){
 	tar -xJ -f data.tar.xz -C "${pkgdir}"
 	mkdir -p "${pkgdir}/usr/share/licenses/${pkgname}"
-	ln -s "/opt/QQ/LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
+	ln -s "/opt/QQ/LICENSE.electron.txt" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 	ln -s "/opt/QQ/LICENSES.chromium.html" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE.chromium.html"
 	cp "${srcdir}/bubblewrapper.sh" "${pkgdir}/opt/QQ/start.sh"
 	sed -i "s#/opt/QQ/qq#/opt/QQ/start.sh#" "${pkgdir}/usr/share/applications/qq.desktop"
