--- a/netease-cloud-music-unblock-enhanced-git/PKGBUILD
+++ b/netease-cloud-music-unblock-enhanced-git/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Yidaozhan Ya <yidaozhan_ya@outlook.com>
 _pkgname=netease-cloud-music-unblock-enhanced
 pkgname=$_pkgname-git
-pkgver=r667.dbb73aa
-pkgrel=2
+pkgver=r1119.e35da5b
+pkgrel=1
 pkgdesc='Revive unavailable songs for Netease Cloud Music (Refactored & Enhanced version)'
 arch=(x86_64)
 url=https://github.com/UnblockNeteaseMusic/server
@@ -12,14 +12,15 @@ conflicts=($_pkgname)
 license=(LGPL3)
 depends=(nss nodejs netease-cloud-music)
 source=(
-git+https://github.com/UnblockNeteaseMusic/server
+  git+https://github.com/UnblockNeteaseMusic/server
   netease-cloud-music-unblock-enhanced
   netease-cloud-music-unblock-enhanced.desktop
-  )
-sha512sums=(SKIP
-  ce4d0bf8a0e4ef86c15b16d98be5281a88afcdb93b2657a21f45d69e6c51316dbf1b297df97da4bc07cd221646b772136b4292cbb2b71e8426399adafeff36b1
-  0ab98f34584f7c121ea68119f3c2c18e6e49fe722012293ecd9100904685c564ff56cce5b259d995610ff30c3fe236939cf4a24d47f2a858159f967c34ff1999
-  )
+)
+sha512sums=(
+  SKIP
+  "36144054004de9cac865f1841c618b400069f87f112b9733e93939a8f4fb470787f4417f6fdcd51ab1511eda53e4907b09ea6a0fbbeadb249831501a4a526aaf"
+  "0ab98f34584f7c121ea68119f3c2c18e6e49fe722012293ecd9100904685c564ff56cce5b259d995610ff30c3fe236939cf4a24d47f2a858159f967c34ff1999"
+)
 pkgver() {
   cd server
   printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
