--- a/kwin-without-gestures/PKGBUILD
+++ b/kwin-without-gestures/PKGBUILD
@@ -4,7 +4,8 @@
 # Contributor: Kirikaze Chiyuki <me@chyk.ink>
 
 pkgname=kwin-without-gestures
-pkgver=6.0.1
+_pkgname=kwin
+pkgver=6.0.2
 _dirver=$(echo $pkgver | cut -d. -f1-3)
 provides=('kwin')
 conflicts=('kwin')
@@ -84,20 +85,21 @@ makedepends=(extra-cmake-modules
 optdepends=('maliit-keyboard: virtual keyboard for kwin-wayland')
 groups=(plasma)
 source=(
-  https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz
+  https://download.kde.org/stable/plasma/$_dirver/$_pkgname-$pkgver.tar.xz
   0001-kwin-disable-gestures.diff
 )
 install=$pkgname.install
 sha256sums=(
-  '6e61857c5030b7b3953cc0da5ee94a243755999a4ce007a00311f91db8975f04'
+  '65340620154fede598daa76cc624739a9824685aa1aa94224efdd5f1b9b076bb'
   '065fda75119d86e9d7b1596784d3db004aceafedba075a05482b01dcc745c877'
 )
 
 build() {
-  pushd $pkgname-$pkgver
+  msg2 "Applying patch..."
+  pushd $_pkgname-$pkgver
   patch -p0 < $srcdir/0001-kwin-disable-gestures.diff
   popd
-  cmake -B build  -S $pkgname-$pkgver \
+  cmake -B build  -S $_pkgname-$pkgver \
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
     -DBUILD_TESTING=OFF
   cmake --build build
