--- a/qt6-base/PKGBUILD
+++ b/qt6-base/PKGBUILD
@@ -7,7 +7,7 @@ pkgbase=qt6-base
 pkgname=(qt6-base qt6-xcb-private-headers)
 _qtver=6.7.0
 pkgver=${_qtver/-/}
-pkgrel=2
+pkgrel=3
 arch=(x86_64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
@@ -85,18 +85,21 @@ source=(git+https://code.qt.io/qt/$_pkgfn#tag=v$pkgver
         qt6-base-cflags.patch
         qt6-base-nostrip.patch
         fix-wrong-cpp-if.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=68102202
+        qt6-test-system-locale.patch
         qt6-base-fix-locale-separator.patch)
 sha256sums=('SKIP'
             '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
             '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
             '81c4821fb1c258603474771a267d450aa8b5d1d298443bc04620d70719c7eab7'
-            'SKIP'
+            '64e8bc80c581cc43be978bbac2be7fa1f630411802378cc61fbfee179a8f2034'
+            'f74e6b5cc973deb1bc938e9a8833f6d3fd49683e97982b4ef803014b0bfd46ce'
             )
 
 prepare() {
   patch -d $_pkgfn -p1 < qt6-base-cflags.patch # Use system CFLAGS
   patch -d $_pkgfn -p1 < qt6-base-nostrip.patch # Don't strip binaries with qmake
   patch -d $_pkgfn -p1 < fix-wrong-cpp-if.patch # https://bugreports.qt.io/browse/QTBUG-123937
+  patch -d $_pkgfn -p1 < qt6-test-system-locale.patch
   patch -d $_pkgfn -p1 < qt6-base-fix-locale-separator.patch
 }
 
